@@ -39,7 +39,7 @@
             <div class="user-info-lg">
                 <img class="icon-large" src="images/icons/majiicon.png">
                 <span style="font-weight: bold;" class="greeting">Hi there,<br>
-                <span style="font-size: 25px;">Majima Gorō (@gorogorogorochan)</span></span>
+                <span style="font-size: 3vh;">Majima Gorō (@gorogorogorochan)</span></span>
             </div>
             <div class="buttons">
                 <button type="button" class="new">New</button>
